# NeuroTelemetry

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Methods_MRP.docx  README.md  main.py  mypy.ini  note.txt  pressure_data_analysis_v.1.1.3.ipynb  pyproject.toml  requirements.txt  setup.py  test.py  test2.py  test3.py  test_main.py
.github/workflows/: build.yml  checks.yml
extracted_data/B1 virgin Day 2 (25-04-24) ponemah_MRP_analysis/: B1 virgin Day 2 (25-04-24) ponemah_MRP_analysis_20250709_sleep_analysis.xlsx
pressure_segment_exports/: pressure_segment_window10.csv  pressure_segment_window5.csv  pressure_segment_window7.csv  pressure_segment_window8.csv
scripts/: batch_run.py  compare_lowpass.py  diagnose_filtering.py
src/: controller.py
src/controllers/: photometry_controller.py  pressure_controller.py
src/core/: adaptive_algorithms.py  data_alignment.py  data_file_parser.py  event_file_parser.py  export_data.py  export_graphs.py  file_handling.py  logger.py  math.py  peak_detection  peak_detection.py  period_analysis.py  photometry_metrics.py  photometry_peaks.py  power_spectral_analysis.py  respiratory_metrics.py
tests/: conftest.py  test_adaptive_algorithms.py  test_batch_run.py  test_data_alignment.py  test_data_alignment_helpers.py  test_data_file_parser.py  test_event_file_parser.py  test_export_data.py  test_export_graphs.py  test_helper_functions.py  test_logger.py  test_parsers_and_files.py  test_peak_detection.py  test_peak_detection_more.py  test_peak_period_respiratory.py  test_period_analysis_more.py  test_photometry_metrics.py  test_photometry_peaks.py  test_photometry_pipeline.py  test_power_spectral_analysis.py  test_pressure_pipeline.py  test_pressure_pipeline_psd.py  test_respiratory_metrics.py
(+3 files in other folders)
