[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NeuroTelemetry"
dynamic = ["version"]
description = "Telemetry and photometry analysis tools for behavioural experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hdbscan>=0.8.38,<0.9",
    "joblib>=1.3.0,<2",
    "matplotlib>=3.10.3,<4",
    "numpy>=2.3.1,<3",
    "openpyxl>=3.1.5,<4",
    "pandas>=2.3.1,<3",
    "plotly>=6.2.0,<7",
    "PySide6>=6.9.1,<7",
    "scikit-learn>=1.4.0,<2",
    "scipy>=1.16.0,<2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10,<2",
    "pre-commit>=3.7,<5",
    "pytest>=8,<9",
    "ruff>=0.9,<1",
]
tuning = [
    "scikit-learn-extra>=0.3.0,<0.4",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".venv",
    "data",
    "extracted_data",
    "test_outputs",
]
[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88       # bump to reduce E501 spam
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
exclude = ["^build/", "^dist/"]
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
follow_imports = "skip"
show_error_codes = true
pretty = true
warn_unused_ignores = false
warn_return_any = false
warn_unused_configs = true
